<resources>
    <string name="app_name">RNR Incident Reporter</string>
    <string name="report_an_incident">Report an Incident</string>
    <string name="injury_report">Injury Report</string>
    <string name="property_damage">Property Damage</string>
    <string name="dangerous_situation">Dangerous Situation</string>
    <string name="copyright_2021_rnr_incident_reporter">Copyright © 2021 RNR Incident Reporter</string>
    <string name="submit">Submit</string>
    <string name="name_of_injured">Name of Injured</string>
    <string name="type_of_injury">Type of Injury</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="name_of_reporter">Name of Reporter</string>
    <string name="name_of_property">Name of Property</string>
    <string name="type_of_damage">Type of Damage</string>
    <string name="type_of_situation">Type of Situation</string>
    <string name="ok">OK</string>
    <string name="name_of_damage">Name of Damage</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
</resources>