<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/cone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/cone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line1"
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="@color/grey"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/cone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/report"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/report_an_incident"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/injury"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/injury_report"
        android:backgroundTint="@color/azure"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/report"/>

    <Button
        android:id="@+id/property"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/property_damage"
        android:backgroundTint="@color/azure"
        app:layout_constraintTop_toBottomOf="@+id/injury" />

    <Button
        android:id="@+id/dangerous"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dangerous_situation"
        android:backgroundTint="@color/azure"
        app:layout_constraintTop_toBottomOf="@+id/property"/>

    <View
        android:id="@+id/line2"
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="@color/grey"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/dangerous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/copyright_2021_rnr_incident_reporter"
        android:textSize="15sp"
        android:textColor="@color/grey"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>